--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@abgov/styles": "1.0.0-alpha.6",
-    "@abgov/web-components": "1.0.0-alpha.63",
-    "@angular/animations": "^13.2.0",
-    "@angular/common": "^13.2.0",
-    "@angular/compiler": "^13.2.0",
-    "@angular/core": "^13.2.0",
-    "@angular/forms": "^13.2.0",
-    "@angular/platform-browser": "^13.2.0",
-    "@angular/platform-browser-dynamic": "^13.2.0",
-    "@angular/router": "^13.2.0",
-    "ng2-currency-mask": "~13.0.0",
-    "rxjs": "^7.5.2",
-    "tslib": "^2.3.1",
-    "zone.js": "^0.11.4"
+    "@abgov/styles": "^1.2.0",
+    "@abgov/web-components": "^1.5.0",
+    "@angular/animations": "14.0.1",
+    "@angular/common": "14.0.1",
+    "@angular/compiler": "14.0.1",
+    "@angular/core": "14.0.1",
+    "@angular/forms": "14.0.1",
+    "@angular/platform-browser": "14.0.1",
+    "@angular/platform-browser-dynamic": "14.0.1",
+    "@angular/router": "14.0.1",
+    "@ng-select/ng-select": "10.0.1",
+    "audit": "0.0.6",
+    "fast-json-patch": "^3.1.1",
+    "file-saver": "^2.0.5",
+    "fix": "^0.0.6",
+    "g": "^2.0.1",
+    "nx": "15.6.2",
+    "oidc-client-ts": "^2.0.1",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4",
+    "ng2-currency-mask": "~13.0.0"
   },
   "scripts": {
     "ng": "ng",
@@ -27,22 +35,49 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.4",
-    "@angular/compiler-cli": "~11.0.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "@abgov/design-tokens": "^1.0.5",
+    "@angular-devkit/build-angular": "14.2.10",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
+    "@angular/cdk": "14.0.1",
+    "@angular/cli": "~14.0.0",
+    "@angular/compiler-cli": "14.0.1",
+    "@angular/language-service": "14.0.1",
+    "@angular/localize": "14.0.1",
+    "@angular/material": "14.0.1",
+    "@nrwl/angular": "15.6.2",
+    "@nrwl/cli": "15.6.2",
+    "@nrwl/cypress": "15.6.2",
+    "@nrwl/eslint-plugin-nx": "15.6.2",
+    "@nrwl/jest": "15.6.2",
+    "@nrwl/linter": "15.6.2",
+    "@nrwl/tao": "15.6.2",
+    "@nrwl/workspace": "15.6.2",
+    "@types/file-saver": "^2.0.5",
+    "@types/jest": "28.1.8",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
+    "axe-core": "4.6.3",
+    "axe-html-reporter": "^2.2.3",
+    "babel-jest": "28.1.3",
+    "chalk": "^5.0.1",
+    "eslint": "8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "fs-extra": "^10.1.0",
+    "jest": "28.1.3",
+    "jest-createspyobj": "^2.0.0",
+    "jest-environment-jsdom": "28.1.3",
+    "jest-preset-angular": "12.2.3",
+    "multiple-cucumber-html-reporter": "^1.20.0",
+    "ng-mocks": "^13.5.2",
+    "path": "^0.12.7",
+    "prettier": "2.6.2",
+    "ts-jest": "28.0.8",
+    "tsify": "^5.0.4",
+    "typescript": "4.7.3",
+    "zone.js": "^0.11.4"
   }
 }
