--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "@angular/platform-browser-dynamic": "14.0.1",
     "@angular/router": "14.0.1",
     "@ng-select/ng-select": "10.0.1",
+    "@swc-node/register": "^1.4.2",
+    "@swc/core": "^1.2.173",
     "audit": "0.0.6",
     "fast-json-patch": "^3.1.1",
     "file-saver": "^2.0.5",
     "fix": "^0.0.6",
     "g": "^2.0.1",
+    "ng2-currency-mask": "~13.0.0",
     "nx": "15.6.2",
-    "oidc-client-ts": "^2.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4",
-    "ng2-currency-mask": "~13.0.0"
+    "typescript": "4.7.3",
+    "zone.js": "~0.11.4"
   },
   "scripts": {
     "ng": "ng",
